2002-12-06    <crunchy@tzi.de>

	* kernel/mpio.c: 2.4.20 does not contain the typedef purb_t
	anymore. Replaced it with 'struct urb *'

2002-11-18  Andreas Buesching  <crunchy@tzi.de>

	* configure.in: add a check for readline header files

2002-11-14  Andreas Buesching  <crunchy@tzi.de>

	* tools/mpiologo.c: renamed logotool.c to mpiologo.c

	* mpio.spec.in (): another way to add the kernel module to
	the file list; add mpiologo to file list
	

2002-11-13  Markus Germeier  <mager@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_format): backup and restore
	  config files  (probably not complete yet!)
	* libmpio/defs.h (MPIO_CHARSET): 
	* libmpio/directory.c (mpio_dentry_put, mpio_dentry_get_real): 
	  use ISO-8859-15 instead of ASCII as default charset encoding
	  (much nicer now!)
	* libmpio/directory.c (mpio_charset_get, mpio_charset_set): 
	  added functions to allow changing of charset 
	* mpiosh/config.c: read charset from config file
	* libmpio/fat.c (mpio_fatentry_read): 
	  fixed problem with CONFIG.DAT that only the first block
	  was read. (what was I thinking there??)

2002-11-04  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_quit): writing configuration
	including history und freeing config reader

	* mpiosh/global.c: modified filename for history
		"~/.mpio/history"

	* mpiosh/config.c (mpiosh_config_new): reading history file
	(mpiosh_config_write): saving current history

2002-11-02  Yuji Touya  <salmoon@users.sourceforge.net>

	* tools/logotool.c: add a tool to extract/change logo animation
         data in config.dat file, and sample animation data.

2002-11-01  Yuji Touya  <salmoon@users.sourceforge.net>

	* kernel/mpio.c: Add usbdevfs filesystem support 

2002-10-29  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/mpiosh.c (mpiosh_init): uses the new configuration file
	support to initialise the shell

	* etc/mpio/mpioshrc: add a sample configuration file will be
	install as a global configuration file in